--- a/projeto.Rmd
+++ b/projeto.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Cultura Data-Driven: Oportunidade, Desafios e Iniciativas" # -----> Título
 subtitle: "" # -----> Subtítulo
-author: "Guilherme César, Kauê José, Maurício Rodrigues, Pedro Vinicius" # -----> Autoria
+author: "Maurício Rodrigues" # -----> Autoria
 date: "2024-04-17" # -----> Data de publicação
 date-format: short # -----> Formato de data curto: dd/mm/aaaa
 lang: pt # -----> Linguagem: português
