--- a/404.Rmd
+++ b/404.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Cultura Data-Driven: Oportunidade, Desafios e Iniciativas" # -----> Título
-subtitle: "" # -----> Subtítulo
+subtitle: "Projeto de Banco de Dados" # -----> Subtítulo
 author: "Guilherme César, Kauê José, Maurício Rodrigues, Pedro Vinicius" # -----> Autoria
 date: "2024-04-17" # -----> Data de publicação
 date-format: short # -----> Formato de data curto: dd/mm/aaaa
@@ -70,7 +70,7 @@ mtcars %>%
 
 ```
 
-Este gráfico de dispersão apresenta a relação entre o peso de um carro e sua eficiência de combustível, medida em milhas por galão (mpg). Cada ponto no gráfico representa um carro, onde o eixo horizontal representa o peso do carro e o eixo vertical representa o número de milhas que o carro pode percorrer com um galão de combustível. Observando a dispersão dos pontos, podemos visualizar como o peso de um carro pode afetar sua eficiência de combustível. Essa visualização pode ajudar a identificar tendências ou padrões na relação entre o peso e a eficiência de combustível dos carros.
+Este gráfico de dispersão apresenta a relação (correlação negativa) entre o peso de um carro e sua eficiência de combustível, medida em milhas por galão (mpg). Cada ponto no gráfico representa um carro, onde o eixo horizontal representa o peso do carro e o eixo vertical representa o número de milhas que o carro pode percorrer com um galão de combustível. Observando a dispersão dos pontos, podemos visualizar como o peso de um carro pode afetar sua eficiência de combustível. Essa visualização pode ajudar a identificar tendências ou padrões na relação entre o peso e a eficiência de combustível dos carros.
 
 ```{r}
 ggplot(mtcars, aes(x = factor(cyl), y = mpg)) +  
@@ -94,4 +94,48 @@ As variáveis cilindragem (cyl) e consumo de combustível (mpg) podem explicar a
 
 No diagrama, são mostrados valores arredondados.
 
+```{r}
+ggplot(mtcars, aes(x = mpg, y = hp, color = factor(cyl))) +
+  geom_point() +
+  geom_smooth(method = "lm", se = FALSE) +
+  labs(title = "Gráfico de Dispersão: Potência vs. Consumo de Combustível",
+       x = "Milhas por Galão (mpg)",
+       y = "Potência (hp)",
+       color = "Número de Cilindros") +
+  scale_color_manual(values = c("blue", "green", "red"))
+```
 
+
+```{r}
+# Ajustando o modelo de regressão: O ~ separa a variável dependente (à esquerda) das variáveis independentes (à direita).
+modelo <- lm(hp ~ cyl + mpg, data = mtcars)
+
+summary(modelo)
+
+```
+O modelo de regressão linear tenta prever a potência dos carros (hp) com base no número de cilindros (cyl) e no consumo de combustível (mpg) utilizando o conjunto de dados mtcars.
+
+
+Logo o número de cilindros (cyl) parece ser uma variável importante na predição da potência (hp) dos carros, enquanto o consumo de combustível (mpg) não parece ter uma influência significativa na potência após controlar para o número de cilindros.
+
+```{r}
+# Valores específicos de cyl e mpg para fazer previsões
+novos_dados <- data.frame(cyl = c(4, 6), mpg = c(25, 30))
+
+previsoes <- predict(modelo, newdata = novos_dados)
+
+print(previsoes)
+```
+Para um carro com 4 cilindros e 25 mpg, a previsão de potência (hp) é aproximadamente 80.61.
+
+Para um carro com 6 cilindros e 30 mpg, a previsão de potência (hp) é aproximadamente 114.70.
+
+
+Foi criado um novo conjunto de dados contendo os valores específicos de cyl e mpg para os quais você deseja fazer previsões. Aqui, estamos fazendo previsões para carros com 4 cilindros e 25 mpg, e carros com 6 cilindros e 30 mpg.
+```{r}
+# Calculando a média da variável dependente (hp) para cada grupo de carros com o mesmo número de cilindros
+media_real <- aggregate(hp ~ cyl, data = mtcars, FUN = mean)
+
+# Exibindo a média calculada
+print(media_real)
+```
