--- a/404.Rmd
+++ b/404.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Cultura Data-Driven: Oportunidade, Desafios e Iniciativas" # -----> Título
 subtitle: "Projeto de Banco de Dados" # -----> Subtítulo
-author: "Guilherme César, Kauê José, Maurício Rodrigues, Pedro Vinicius" # -----> Autoria
+author: "Maurício Rodrigues" # -----> Autoria
 date: "2024-04-17" # -----> Data de publicação
 date-format: short # -----> Formato de data curto: dd/mm/aaaa
 lang: pt # -----> Linguagem: português
@@ -139,3 +139,9 @@ media_real <- aggregate(hp ~ cyl, data = mtcars, FUN = mean)
 # Exibindo a média calculada
 print(media_real)
 ```
+
+Referências:
+
+https://cran.r-project.org/web/packages/explore/vignettes/explore_mtcars.html
+
+http://leg.ufpr.br/~paulojus/ce223/ce223/ce223se8.html
