--- a/404.Rmd
+++ b/404.Rmd
@@ -1,6 +1,13 @@
 ---
-title: "Cultura Data-Driven: Oportunidade, Desafios e Iniciativas" # -----> Título
-subtitle: "Projeto de Banco de Dados" # -----> Subtítulo
+title: "Estudo da Base mtcars" # -----> Título
+subtitle: "
+Referências:
+
+- [Explore mtcars](https://cran.r-project.org/web/packages/explore/vignettes/explore_mtcars.html)  
+- [CE223 - Modelos de Regressão Linear](http://leg.ufpr.br/~paulojus/ce223/ce223/ce223se8.html)  
+- [Análise do dataset mtcars em R](https://rpubs.com/Saulo_Gil/817833)
+
+" # -----> Subtítulo
 author: "Maurício Rodrigues" # -----> Autoria
 date: "2024-04-17" # -----> Data de publicação
 date-format: short # -----> Formato de data curto: dd/mm/aaaa
@@ -19,33 +26,54 @@ title-block-banner: true # -----> Estilo de banner no topo do documento
 #| out.width: "100%"
 #| fig-cap: ""
 
-knitr::include_graphics("dados.jpg")
+knitr::include_graphics("logo.png")
 ```
-
-A soma de todos os lados de um dado padrão é 21
 
 ```{r setup, include=FALSE}
 data("mtcars")
 library(ggplot2)
 library(explore)
 library(dplyr, warn.conflicts = FALSE)
+library(caret)
 ```
 
-INTRODUÇÃO
+### INTRODUÇÃO
 
 A base de dados r mtcars consiste de uma planilha disponível no base r cujo os dados foram extraídos da revista Motor Trend US magazine de 1974. Os dados inseridos consistem do consumo de combustível, 10 características físicas e/ou performance de 32 automóveis (modelos de 1973-1974). A planilha do r mtcars consiste em 32 obsevações (modelo do carro) com 11 variáveis numéricas.
 
 mpg = Milhas por galão (do inglês Miles/(US) gallon);
+
+
 cyl = Número de cilindos (do inglês Number of cylinders);
+
+
 disp = Deslocamento do motor (cu.in.)(do inglês Displacement);
+
+
 hp = Cavalos de potência (do inglês Gross horsepower);
+
+
 drat = Razão do eixo traseiro (do inglês Rear axle ratio);
+
+
 wt = Peso (1000 lbs)(do inglês Weight);
+
+
 qsec = Tempo para percorrer 1/4 de uma milha (do inglês 1/4 mile time);
+
+
 vs = Motor (0 = V-shaped, 1 = straight)(do ingês Engine);
+
+
 am = Transmissão (0 = automatic, 1 = manual)(do inglês Transmission);
+
+
 gear = Número de eixos dianteiros (do inglês Number of forward gears);
+
+
 carb = Número de carburadores (do inglês Number of carburetors).
+
+
 
 ```{r}
 ggplot(mtcars, aes(x = factor(cyl))) + 
@@ -55,6 +83,10 @@ ggplot(mtcars, aes(x = factor(cyl))) +
        title = "Contagem de carros por número de cilindros") +
   ylim(0, 15) + 
   theme(plot.title = element_text(hjust = 0.5))
+```
+
+```{r}
+hist(mtcars$hp)
 ```
 
 
@@ -70,6 +102,28 @@ mtcars %>%
 
 ```
 
+```{r}
+mtcars %>% 
+  ggplot(aes(cyl,mpg)) + 
+  geom_point() + 
+  labs(x = "Cilindros",        
+       y = "Milhas por galão",
+    title = "Milhas por galão x Cilindros")+
+  theme(plot.title = element_text(hjust = 0.5))
+```
+
+```{r}
+ggplot(mtcars, aes(x = mpg, y = hp, color = factor(cyl))) +
+  geom_point() +
+  geom_smooth(method = "lm") +
+  labs(title = "Gráfico de Dispersão: Potência vs. Consumo de Combustível",
+       x = "Milhas por Galão (mpg)",
+       y = "Potência (hp)",
+       color = "Número de Cilindros") +
+  scale_color_manual(values = c("blue", "green", "red"))
+```
+
+
 Este gráfico de dispersão apresenta a relação (correlação negativa) entre o peso de um carro e sua eficiência de combustível, medida em milhas por galão (mpg). Cada ponto no gráfico representa um carro, onde o eixo horizontal representa o peso do carro e o eixo vertical representa o número de milhas que o carro pode percorrer com um galão de combustível. Observando a dispersão dos pontos, podemos visualizar como o peso de um carro pode afetar sua eficiência de combustível. Essa visualização pode ajudar a identificar tendências ou padrões na relação entre o peso e a eficiência de combustível dos carros.
 
 ```{r}
@@ -80,7 +134,7 @@ ggplot(mtcars, aes(x = factor(cyl), y = mpg)) +
        title = "Distribuição do consumo de combustível por número de cilindros") +
   theme(plot.title = element_text(hjust = 0.5))
 ```
-apesar da maioria dos carros com 8 cilindros terem um consumo de combustível semelhante, há alguns casos extremos com um consumo muito alto ou muito baixo em relação à média. Esses pontos discrepantes podem ser de interesse para uma análise mais aprofundada, pois podem indicar características incomuns nos veículos com 8 cilindros que os diferenciam dos demais.
+Apesar da maioria dos carros com 8 cilindros terem um consumo de combustível semelhante, há alguns casos extremos com um consumo muito alto ou muito baixo em relação à média. Esses pontos discrepantes podem ser de interesse para uma análise mais aprofundada, pois podem indicar características incomuns nos veículos com 8 cilindros que os diferenciam dos demais.
 
 ```{r}
 mtcars %>% 
@@ -92,56 +146,195 @@ Todos os carros têm uma potência média de 147 (mostrada no nó superior). Em 
 
 As variáveis cilindragem (cyl) e consumo de combustível (mpg) podem explicar a potência. Os nós inferiores estão mostrando uma potência média de 80, 121 e 209.
 
-No diagrama, são mostrados valores arredondados.
+```{r}
+modelo_multi = lm(mpg ~ wt + cyl + disp + hp + drat + wt + qsec + vs + am + gear + carb, mtcars)
+
+summary(modelo_multi)
+```
+
+Conforme observado nas análises exploratórias acima descritas (gráfico de dispersão e matriz de correlação), há várias relações lineares entre as diferentes características físicas e desempenho do carro com a variável de eficiência, ou seja, mpg. Por conta disso, optei por construir um modelo de regressão utilizando a estratégia de “redução do modelo” onde são inseridas todas as variáveis preditoras candidatas ao modelo e, em seguida, são removidas sistematicamente as variáveis com o valor-p mais alto, um a um, até que você fique com apenas variáveis preditoras significativas.
+
+
+Após observado os valores de p do modelo em cima foi iniciada a estratégia de “redução do modelo”. Por fim, o modelo com apenas variáveis preditoras significantes foi o seguinte:
 
 ```{r}
-ggplot(mtcars, aes(x = mpg, y = hp, color = factor(cyl))) +
+modelo_reduzido = lm(mpg ~ wt + qsec + am, mtcars)
+
+summary(modelo_reduzido)
+```
+
+Embora este modelo se resuma em apenas variáveis preditoras significantes, o que pode ser uma crítica, visto que outras variáveis podem ser importantes mesmo que elas náo apresentem relação significante, a inserção de muitas variáveis preditoras, em contrapartida, pode introduzir ao modelo ruídos aleatórios por conta de overfitting. Sendo assim, verificar indicadores de qualidade do modelo se torna fundamental.
+
+### Overfitting
+
+O ajuste excessivo, ou overfitting, é um problema comum em aprendizado de máquina que ocorre quando um modelo é excessivamente complexo, contendo mais parâmetros do que o necessário para os dados disponíveis. Este modelo se ajusta muito bem aos dados de treinamento, incluindo ruídos e anomalias, mas falha em prever novos dados com precisão.
+
+#### Consequências
+- Modelos overfit tendem a ter bom desempenho nos dados de treino mas se comportam mal em dados de teste ou novos dados, o que pode levar a decisões equivocadas em situações reais.
+
+#### Identificação
+- Overfitting pode ser identificado observando-se uma grande diferença entre os resultados nos dados de treino e teste, onde o modelo apresenta alta precisão nos dados de treino e baixa precisão nos dados de teste.
+
+#### Estratégias de Mitigação
+
+- **Divisão de Dados**: Dividir o conjunto de dados em treino e teste ajuda a detectar e evitar o overfitting, garantindo que o modelo seja avaliado em dados que não foram usados durante o treinamento.
+
+- **Validação Cruzada**: Utilizar técnicas de validação cruzada pode ajudar a avaliar a capacidade do modelo de generalizar para novos conjuntos de dados.
+
+- **Seleção de Variáveis**: Escolher variáveis com base em conhecimento substantivo e análise exploratória pode prevenir a inclusão de variáveis desnecessárias que aumentam a complexidade do modelo.
+
+Incluir estas práticas básicas no desenvolvimento de modelos ajuda a construir sistemas mais robustos e confiáveis.
+
+
+```{r}
+ggplot(mtcars, aes(x = wt, y = mpg, color = factor(am))) +
   geom_point() +
-  geom_smooth(method = "lm", se = FALSE) +
-  labs(title = "Gráfico de Dispersão: Potência vs. Consumo de Combustível",
-       x = "Milhas por Galão (mpg)",
-       y = "Potência (hp)",
-       color = "Número de Cilindros") +
-  scale_color_manual(values = c("blue", "green", "red"))
+  geom_smooth(method = "lm") +
+  labs(x = "Peso (wt)", y = "Eficiência de Combustível (mpg)", color = "Transmissão") +
+  scale_color_manual(values = c("blue", "red"), labels = c("Automático", "Manual")) +
+  ggtitle("Relação entre Eficiência de Combustível, Peso e Transmissão") +
+  theme_minimal()
 ```
+
+```{r}
+ggplot(mtcars, aes(x = qsec, y = mpg, color = factor(am))) +
+  geom_point() +
+  geom_smooth(method = "lm") +
+  labs(x = "Tempo para percorrer um quarto de milha (qsec)", y = "Eficiência de Combustível (mpg)", color = "Transmissão") +
+  scale_color_manual(values = c("blue", "red"), labels = c("Automático", "Manual")) +
+  ggtitle("Relação entre Eficiência de Combustível, Tempo e Transmissão") +
+  theme_minimal()
+```
+Primeiramente, podemos observar que carros com transmissão automática apresentam maior peso e menor eficiência do que carros com transmissão manual. Além disso, nota-se que a variável am (transmissão) influência na inclinação da reta.
+
+Neste sentido foi ajustado o modelo proposto com uma interação entre as variáveis peso (wt) e transmissão (am) do automóvel. O novo modelo ficou da seguinte maneira:
 
 
 ```{r}
-# Ajustando o modelo de regressão: O ~ separa a variável dependente (à esquerda) das variáveis independentes (à direita).
-modelo <- lm(hp ~ cyl + mpg, data = mtcars)
+novo_modelo = lm(mpg ~ qsec + wt * am, mtcars)
 
-summary(modelo)
-
+summary(novo_modelo)
 ```
-O modelo de regressão linear tenta prever a potência dos carros (hp) com base no número de cilindros (cyl) e no consumo de combustível (mpg) utilizando o conjunto de dados mtcars.
+Como podemos observar, a inserção da interação entre as variáveis de peso e transmissão do automóvel promoveu um ajuste no modelo de regressão sendo que as variáveis preditores aumentaram o coeficiente e a probabilidade de acerto (todos p < 0.01).
 
-
-Logo o número de cilindros (cyl) parece ser uma variável importante na predição da potência (hp) dos carros, enquanto o consumo de combustível (mpg) não parece ter uma influência significativa na potência após controlar para o número de cilindros.
+Carros que levam mais tempo para percorrer um quarto de milha e têm transmissão automática tendem a ter uma eficiência de combustível mais alta, enquanto carros mais pesados tendem a ter uma eficiência de combustível mais baixa, e o efeito do peso no consumo de combustível pode ser diferente dependendo do tipo de transmissão.
 
 ```{r}
-# Valores específicos de cyl e mpg para fazer previsões
-novos_dados <- data.frame(cyl = c(4, 6), mpg = c(25, 30))
+novo_dados <- data.frame(qsec = 17, wt = 3.5, am = 1)
 
-previsoes <- predict(modelo, newdata = novos_dados)
+previsao_mpg <- predict(novo_modelo, novo_dados)
 
-print(previsoes)
+print(previsao_mpg)
 ```
-Para um carro com 4 cilindros e 25 mpg, a previsão de potência (hp) é aproximadamente 80.61.
+Foi criado um novo data frame com valores específicos para as variáveis independentes (qsec = 17, wt = 3.5, am = 1) e foi usado esses valores para fazer uma previsão de eficiência de combustível (mpg) usando um novo modelo. A previsão resultante foi de aproximadamente 16.32 mpg.
 
-Para um carro com 6 cilindros e 30 mpg, a previsão de potência (hp) é aproximadamente 114.70.
-
-
-Foi criado um novo conjunto de dados contendo os valores específicos de cyl e mpg para os quais você deseja fazer previsões. Aqui, estamos fazendo previsões para carros com 4 cilindros e 25 mpg, e carros com 6 cilindros e 30 mpg.
 ```{r}
-# Calculando a média da variável dependente (hp) para cada grupo de carros com o mesmo número de cilindros
-media_real <- aggregate(hp ~ cyl, data = mtcars, FUN = mean)
+r_squared <- summary(novo_modelo)$r.squared
+r_squared
+```
+Significa que cerca de 89.6% da variabilidade na eficiência de combustível (mpg) pode ser explicada pelas variáveis independentes incluídas no modelo.
 
-# Exibindo a média calculada
-print(media_real)
+
+```{r}
+residuos <- residuals(novo_modelo)
+
+plot(x = predict(novo_modelo), y = residuos,
+     xlab = "Valores Previstos", ylab = "Resíduos",
+     main = "Gráfico de Resíduos versus Valores Previstos")
+
+qqnorm(residuos)
+qqline(residuos)
 ```
 
-Referências:
+### Gráfico de Resíduos versus Valores Previstos:
+Neste gráfico, os resíduos (diferenças entre os valores observados e os valores previstos pelo modelo) são plotados no eixo vertical em relação aos valores previstos pelo modelo no eixo horizontal. 
 
-https://cran.r-project.org/web/packages/explore/vignettes/explore_mtcars.html
+Este gráfico é útil para verificar se os resíduos têm uma distribuição aleatória em torno de zero e se não há padrões discerníveis nos resíduos. Idealmente, gostaríamos de ver uma dispersão aleatória dos pontos em torno de zero, sem padrões visíveis. 
 
-http://leg.ufpr.br/~paulojus/ce223/ce223/ce223se8.html
+Se houver algum padrão ou tendência nos resíduos, isso pode indicar que o modelo não está capturando completamente a relação entre as variáveis ou que há heterocedasticidade.
+
+### Gráfico Q-Q Plot:
+O gráfico Q-Q plot compara os quantis dos resíduos com os quantis de uma distribuição normal. 
+
+Se os resíduos seguirem uma distribuição normal, os pontos no gráfico Q-Q plot seguirão aproximadamente uma linha reta. 
+
+Qualquer desvio significativo dessa linha reta pode indicar desvios da normalidade nos resíduos.
+
+No gráfico de Resíduos versus Valores Previstos, os dados estão dispersos e não há um padrão discernível, o que é uma boa indicação.
+
+No gráfico Q-Q plot, os pontos estão próximos da linha reta, o que sugere que os resíduos estão aproximadamente normalmente distribuídos.
+
+```{r}
+outro_modelo <- lm(formula = mpg ~ qsec + wt, data = mtcars)
+
+r_squared_outro <- summary(outro_modelo)$r.squared
+
+r_squared_outro
+```
+Isso significa que este novo modelo explica cerca de 82.6% da variabilidade na eficiência de combustível com base nas variáveis qsec e wt. Comparado ao modelo anterior, que tinha um R ao quadrado de cerca de 0.896, este novo modelo explica um pouco menos da variabilidade nos dados.
+
+### Comparação de R-squared :
+
+O primeiro modelo (modelo original) tem um R-squared de aproximadamente 0.896.
+
+O segundo modelo (novo modelo) tem um R-squared de aproximadamente 0.826.
+
+Isso indica que o primeiro modelo explica mais da variabilidade na eficiência de combustível (mpg) com base nas variáveis incluídas no modelo.
+
+### Variáveis Incluídas:
+O primeiro modelo inclui as variáveis qsec, wt e a interação wt:am.
+
+O segundo modelo inclui apenas as variáveis qsec e wt.
+
+### Interpretação:
+
+O primeiro modelo pode ser mais complexo de interpretar devido à inclusão da interação entre wt e am.
+O segundo modelo é mais simples, incluindo apenas duas variáveis principais (qsec e wt).
+
+```{r}
+modelo <- lm(mpg ~ wt + qsec + am, data = mtcars)
+
+par(mfrow=c(2,2))
+plot(modelo)
+```
+### 1. Residuals vs Fitted
+
+Objetivo: Este gráfico mostra os resíduos em função dos valores ajustados (predições do modelo).
+
+Interpretação: Idealmente, você quer ver os pontos dispersos aleatoriamente em torno da linha horizontal em y = 0, sem padrões discerníveis. Isso indicaria que o modelo é apropriado e não há erros sistemáticos.
+
+Problemas Identificados: Padrões nos dados sugerem não-linearidade, resíduos crescentes ou decrescentes indicam heterocedasticidade (variância não constante dos resíduos).
+
+### 2. Normal Q-Q
+
+Objetivo: Este gráfico compara os quantis dos resíduos do modelo com os quantis de uma distribuição normal.
+
+Interpretação: Pontos alinhados aproximadamente em uma linha reta indicam que os resíduos estão distribuídos normalmente.
+
+Problemas Identificados: Desvios da linha reta sugerem que os resíduos não seguem uma distribuição normal.
+
+### 3. Scale-Location (também conhecido como Spread-Location)
+
+Objetivo: Este gráfico mostra os resíduos padronizados em relação aos valores ajustados, ajudando a verificar a homocedasticidade.
+
+Interpretação: Um spread constante dos resíduos ao longo dos valores ajustados sugere homocedasticidade.
+
+Problemas Identificados: Um funil (resíduos se espalhando ou contraindo com o aumento dos valores ajustados) indica heterocedasticidade.
+
+### 4. Residuals vs Leverage
+
+Objetivo: Este gráfico ajuda a identificar observações influentes.
+
+Interpretação: Observações fora da curva Cook’s distance sugerem pontos com alta influência.
+
+Problemas Identificados: Pontos com alta alavancagem e resíduos grandes são particularmente problemáticos, pois podem distorcer significativamente a regressão.
+
+```{r}
+previsoes <- predict(novo_modelo, newdata = mtcars)
+
+plot(mtcars$mpg, previsoes,
+     xlab = "Valores Observados", ylab = "Valores Previstos",
+     main = "Gráfico de Valores Observados x Valores Previstos")
+abline(a = 0, b = 1, col = "red") 
+```
+Quando os valores observados aumentam, os valores previstos também aumentam, e vice-versa. Isso sugere que o modelo está capturando razoavelmente bem a tendência dos dados. 
