--- a/404.Rmd
+++ b/404.Rmd
@@ -35,6 +35,7 @@ library(ggplot2)
 library(explore)
 library(dplyr, warn.conflicts = FALSE)
 library(caret)
+library(ggcorrplot)
 ```
 
 ### INTRODUÇÃO
@@ -102,29 +103,63 @@ mtcars %>%
 
 ```
 
-```{r}
-mtcars %>% 
-  ggplot(aes(cyl,mpg)) + 
-  geom_point() + 
-  labs(x = "Cilindros",        
-       y = "Milhas por galão",
-    title = "Milhas por galão x Cilindros")+
-  theme(plot.title = element_text(hjust = 0.5))
-```
+Este gráfico de dispersão apresenta a relação (correlação negativa) entre o peso de um carro e sua eficiência de combustível, medida em milhas por galão (mpg). Cada ponto no gráfico representa um carro, onde o eixo horizontal representa o peso do carro e o eixo vertical representa o número de milhas que o carro pode percorrer com um galão de combustível. Observando a dispersão dos pontos, podemos visualizar como o peso de um carro pode afetar sua eficiência de combustível. Essa visualização pode ajudar a identificar tendências ou padrões na relação entre o peso e a eficiência de combustível dos carros.
+
+Abaixo podemos ver a relação de outras variaveis como Milhas por galão(mpg) x Potência(hp) e também, no próximo gráfico a relação de Milhas por galão(mpg) x Potência (hp) por numémro de Cilindros(cyl):
 
 ```{r}
-ggplot(mtcars, aes(x = mpg, y = hp, color = factor(cyl))) +
+mtcars %>% 
+  ggplot(aes(hp,mpg)) + 
+  geom_point() + 
+  labs(x = "Potência(hp)",        
+       y = "Milhas por galão(mpg)",
+    title = "Milhas por galão x Potência")+
+  theme(plot.title = element_text(hjust = 0.5))
+```
+Pode-se indentificar que a potência implica em um consumo maior de combustivel.
+
+```{r}
+correl = cor(mtcars)
+
+# Em branco as correlações não significativas
+ggcorrplot(
+  correl,
+  hc.order = TRUE,
+  type = "lower",
+  lab = TRUE,
+  lab_size = 2.5,
+  p.mat = cor_pmat(mtcars), # martriz de p-valores para correlação
+  insig = "blank",
+  title = "Grafico matriz de Correlação"
+)
+```
+Ao analisar o gráfico podemos indentificar correlações positivas e negativas, os espaços em branco indicam uma fraca ou nenhuma correlação entre as variáveis, optei por não pôr no gráfico.
+
+```{r}
+ggplot(mtcars, aes(x = hp, y = mpg, color = factor(cyl))) +
   geom_point() +
   geom_smooth(method = "lm") +
   labs(title = "Gráfico de Dispersão: Potência vs. Consumo de Combustível",
-       x = "Milhas por Galão (mpg)",
-       y = "Potência (hp)",
+       x = "Potência(hp)",
+       y = "Milhas por Galão (mpg)",
        color = "Número de Cilindros") +
   scale_color_manual(values = c("blue", "green", "red"))
 ```
+Aqui nota-se que quanto maior o número de cilindros maior a potência e assim maior o consumo de combustivel (correlação positiva).
 
+Quem entende de veículos pode achar isso lógico, porém quero mostrar que essa relação pode ser entendida de forma mais simples e intuitiva visívelmente.
 
-Este gráfico de dispersão apresenta a relação (correlação negativa) entre o peso de um carro e sua eficiência de combustível, medida em milhas por galão (mpg). Cada ponto no gráfico representa um carro, onde o eixo horizontal representa o peso do carro e o eixo vertical representa o número de milhas que o carro pode percorrer com um galão de combustível. Observando a dispersão dos pontos, podemos visualizar como o peso de um carro pode afetar sua eficiência de combustível. Essa visualização pode ajudar a identificar tendências ou padrões na relação entre o peso e a eficiência de combustível dos carros.
+Como essas poderiam ser construidos outros gráficos para mostrar as relações sobre a variavel dependente que nesse caso seria Milhas por Galão (mpg).
+
+```{r}
+mtcars %>% 
+  explain_tree(target = hp, minsplit=15)
+```
+Existe uma relação entre potência e outras variáveis como número de cilindros? Anteriormente pudemos notar que sim.
+
+Todos os carros têm uma potência média de 147 (mostrada no nó superior). Em seguida, os dados são divididos por cilindro. Carros com cilindragem <7 (56% de todos os carros) têm uma potência média de 98 e carros com cilindragem >=7 (44% de todos os carros) têm uma potência média de 209.
+
+As variáveis cilindragem (cyl) e consumo de combustível (mpg) podem explicar a potência. Os nós inferiores estão mostrando uma potência média de 80, 121 e 209.
 
 ```{r}
 ggplot(mtcars, aes(x = factor(cyl), y = mpg)) +  
@@ -136,15 +171,6 @@ ggplot(mtcars, aes(x = factor(cyl), y = mpg)) +
 ```
 Apesar da maioria dos carros com 8 cilindros terem um consumo de combustível semelhante, há alguns casos extremos com um consumo muito alto ou muito baixo em relação à média. Esses pontos discrepantes podem ser de interesse para uma análise mais aprofundada, pois podem indicar características incomuns nos veículos com 8 cilindros que os diferenciam dos demais.
 
-```{r}
-mtcars %>% 
-  explain_tree(target = hp, minsplit=15)
-```
-Existe uma relação entre potência e outras variáveis como número de cilindros?
-
-Todos os carros têm uma potência média de 147 (mostrada no nó superior). Em seguida, os dados são divididos por cilindro. Carros com cilindragem <7 (56% de todos os carros) têm uma potência média de 98 e carros com cilindragem >=7 (44% de todos os carros) têm uma potência média de 209.
-
-As variáveis cilindragem (cyl) e consumo de combustível (mpg) podem explicar a potência. Os nós inferiores estão mostrando uma potência média de 80, 121 e 209.
 
 ```{r}
 modelo_multi = lm(mpg ~ wt + cyl + disp + hp + drat + wt + qsec + vs + am + gear + carb, mtcars)
@@ -162,7 +188,6 @@ modelo_reduzido = lm(mpg ~ wt + qsec + am, mtcars)
 
 summary(modelo_reduzido)
 ```
-
 Embora este modelo se resuma em apenas variáveis preditoras significantes, o que pode ser uma crítica, visto que outras variáveis podem ser importantes mesmo que elas náo apresentem relação significante, a inserção de muitas variáveis preditoras, em contrapartida, pode introduzir ao modelo ruídos aleatórios por conta de overfitting. Sendo assim, verificar indicadores de qualidade do modelo se torna fundamental.
 
 ### Overfitting
@@ -220,13 +245,27 @@ Como podemos observar, a inserção da interação entre as variáveis de peso e
 Carros que levam mais tempo para percorrer um quarto de milha e têm transmissão automática tendem a ter uma eficiência de combustível mais alta, enquanto carros mais pesados tendem a ter uma eficiência de combustível mais baixa, e o efeito do peso no consumo de combustível pode ser diferente dependendo do tipo de transmissão.
 
 ```{r}
-novo_dados <- data.frame(qsec = 17, wt = 3.5, am = 1)
+previsoes <- predict(novo_modelo, newdata = mtcars)
 
-previsao_mpg <- predict(novo_modelo, novo_dados)
-
-print(previsao_mpg)
+plot(mtcars$mpg, previsoes,
+     xlab = "Valores Observados", ylab = "Valores Previstos",
+     main = "Gráfico de Valores Observados x Valores Previstos")
+abline(a = 0, b = 1, col = "red") 
 ```
-Foi criado um novo data frame com valores específicos para as variáveis independentes (qsec = 17, wt = 3.5, am = 1) e foi usado esses valores para fazer uma previsão de eficiência de combustível (mpg) usando um novo modelo. A previsão resultante foi de aproximadamente 16.32 mpg.
+Quando os valores observados aumentam, os valores previstos também aumentam, e vice-versa. Isso sugere que o modelo está capturando razoavelmente bem a tendência dos dados.
+
+Usando este modelo, previsões para mpg foram feitas para cada carro no dataset mtcars, usando predict(novo_modelo, newdata = mtcars). As previsões geradas levam em consideração as relações aprendidas durante o ajuste do modelo, como a influência do peso, do tempo de quarto de milha e do tipo de transmissão, além de como essas variáveis interagem entre si.
+
+#### OBS:
+Previsão com o Modelo: Depois de construir o modelo, você utiliza a função predict() para gerar previsões de mpg com base nas variáveis independentes fornecidas pelo dataset mtcars. 
+
+O modelo usa os coeficientes (relações estatísticas) aprendidos durante o treinamento para calcular os valores previstos de mpg para cada carro no dataset.
+
+Comparação das Previsões com os Valores Reais: O próximo passo é visualizar e comparar essas previsões com os valores reais de mpg. Isso é feito através de um gráfico de dispersão, onde:
+
+O eixo X exibe os valores reais de mpg do dataset mtcars.
+
+O eixo Y exibe os valores previstos de mpg gerados pelo modelo.
 
 ```{r}
 r_squared <- summary(novo_modelo)$r.squared
@@ -234,6 +273,14 @@ r_squared
 ```
 Significa que cerca de 89.6% da variabilidade na eficiência de combustível (mpg) pode ser explicada pelas variáveis independentes incluídas no modelo.
 
+```{r}
+novo_dados <- data.frame(qsec = 17, wt = 3.5, am = 1)
+
+previsao_mpg <- predict(novo_modelo, novo_dados)
+
+print(previsao_mpg)
+```
+Foi criado um novo data frame com valores específicos para as variáveis independentes (qsec = 17, wt = 3.5, am = 1) e foi usado esses valores para fazer uma previsão de eficiência de combustível (mpg) usando um novo modelo. A previsão resultante foi de aproximadamente 16.32 mpg.
 
 ```{r}
 residuos <- residuals(novo_modelo)
@@ -301,7 +348,7 @@ plot(modelo)
 
 Objetivo: Este gráfico mostra os resíduos em função dos valores ajustados (predições do modelo).
 
-Interpretação: Idealmente, você quer ver os pontos dispersos aleatoriamente em torno da linha horizontal em y = 0, sem padrões discerníveis. Isso indicaria que o modelo é apropriado e não há erros sistemáticos.
+Interpretação: Idealmente, se quer ver os pontos dispersos aleatoriamente em torno da linha horizontal em y = 0, sem padrões discerníveis. Isso indicaria que o modelo é apropriado e não há erros sistemáticos.
 
 Problemas Identificados: Padrões nos dados sugerem não-linearidade, resíduos crescentes ou decrescentes indicam heterocedasticidade (variância não constante dos resíduos).
 
@@ -329,12 +376,3 @@ Interpretação: Observações fora da curva Cook’s distance sugerem pontos co
 
 Problemas Identificados: Pontos com alta alavancagem e resíduos grandes são particularmente problemáticos, pois podem distorcer significativamente a regressão.
 
-```{r}
-previsoes <- predict(novo_modelo, newdata = mtcars)
-
-plot(mtcars$mpg, previsoes,
-     xlab = "Valores Observados", ylab = "Valores Previstos",
-     main = "Gráfico de Valores Observados x Valores Previstos")
-abline(a = 0, b = 1, col = "red") 
-```
-Quando os valores observados aumentam, os valores previstos também aumentam, e vice-versa. Isso sugere que o modelo está capturando razoavelmente bem a tendência dos dados. 
